Query Records by passing from-to query params
